# project-chimera

./: .coderabbit.yaml  .gitignore  AGENT_PLAYBOOK.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  GOVERNANCE_SECURITY.md  Makefile  README.md  pyproject.toml
.cursor/: rules
.github/workflows/: main.yml
.mcp/: config.json
chimera/: approval.py  orchestrator.py  state.py  storage.py  trace.py
demo/: dashboard.py  frontend.py  run_demo.py  streamlit_dashboard.py
docs/: architecture.md
docs/mcp/: mcp_config.md  sample_trace.md
docs/research/: architecture_strategy.md  project-report.md
skills/: manifest.json
skills/skill_content_generator/: README.md  contract.json  run.py  run.py.save
skills/skill_publisher/: README.md  contract.json  run.py
skills/skill_safety_validator/: README.md  contract.json  run.py
skills/skill_trend_fetcher/: README.md  contract.json  run.py
specs/: _meta.md  acceptance_criteria.md  database.md  functional.md  openclaw_integration.md  technical.md
specs/schemas/: content_generator.json  publisher.json  safety_validator.json  trend_fetcher.json
tests/: test_contract_schemas.py  test_openclaw_future.py  test_skills_interface.py  test_storage_future.py  test_trend_fetcher.py
