[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-chimera"
version = "0.1.0"
description = "Governed multi-agent autonomous influencer network"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name="Meseret Bolled" }
]

dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["chimera*", "skills*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
